// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cast component should match snapshot 1`] = `
<DocumentFragment>
  <div
    class="container top-margin"
  >
    <div
      class="ant-row css-dev-only-do-not-override-1ae8k9u"
    >
      <div
        class="ant-col ant-col-24 css-dev-only-do-not-override-1ae8k9u"
      >
        <div
          class="ant-typography css-dev-only-do-not-override-1ae8k9u"
        >
          <a
            href="/movie/1234-test-movie"
          >
            <span
              aria-label="arrow-left"
              class="anticon anticon-arrow-left"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="arrow-left"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M872 474H286.9l350.2-304c5.6-4.9 2.2-14-5.2-14h-88.5c-3.9 0-7.6 1.4-10.5 3.9L155 487.8a31.96 31.96 0 000 48.3L535.1 866c1.5 1.3 3.3 2 5.2 2h91.5c7.4 0 10.8-9.2 5.2-14L286.9 550H872c4.4 0 8-3.6 8-8v-60c0-4.4-3.6-8-8-8z"
                />
              </svg>
            </span>
             Back to movie details
          </a>
        </div>
      </div>
    </div>
    <div
      class="ant-row css-dev-only-do-not-override-1ae8k9u"
    >
      <div
        class="ant-col ant-col-24 css-dev-only-do-not-override-1ae8k9u"
      >
        <div
          class="ant-flex css-dev-only-do-not-override-1ae8k9u ant-flex-align-center ant-flex-gap-middle"
          style="margin-bottom: 24px;"
        >
          <h1
            class="ant-typography css-dev-only-do-not-override-1ae8k9u"
            style="margin-bottom: 0px;"
          >
            test/title (1999)
          </h1>
        </div>
      </div>
    </div>
    <div
      class="ant-row css-dev-only-do-not-override-1ae8k9u"
    >
      <div
        class="ant-col ant-col-24 css-dev-only-do-not-override-1ae8k9u"
      >
        <h3
          class="ant-typography css-dev-only-do-not-override-1ae8k9u"
        >
          Cast
          <span
            class="total-count"
          >
             (1)
          </span>
        </h3>
      </div>
      <div
        class="ant-col ant-col-24 css-dev-only-do-not-override-1ae8k9u"
      >
        <div
          class="ant-row css-dev-only-do-not-override-1ae8k9u"
          style="margin-left: -12px; margin-right: -12px; row-gap: 16px;"
        >
          <div
            class="ant-col ant-col-24 ant-col-sm-12 ant-col-md-8 ant-col-lg-8 ant-col-xl-6 css-dev-only-do-not-override-1ae8k9u"
            style="padding-left: 12px; padding-right: 12px;"
          >
            <div
              class="ant-card ant-card-bordered ant-card-hoverable css-dev-only-do-not-override-1ae8k9u"
            >
              <div
                class="ant-card-cover"
              >
                <img
                  alt="test/name"
                  src="https://image.tmdb.org/t/p/w500/image"
                />
              </div>
              <div
                class="ant-card-body"
              >
                <div
                  class="ant-card-meta"
                >
                  <div
                    class="ant-card-meta-detail"
                  >
                    <div
                      class="ant-card-meta-title"
                    >
                      test/name
                    </div>
                    <div
                      class="ant-card-meta-description"
                    >
                      test/character
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-divider css-dev-only-do-not-override-1ae8k9u ant-divider-horizontal"
        role="separator"
      />
      <div
        class="ant-col ant-col-24 css-dev-only-do-not-override-1ae8k9u"
      >
        <h3
          class="ant-typography css-dev-only-do-not-override-1ae8k9u"
        >
          Crew 
          <span
            class="total-count"
          >
            (1)
          </span>
        </h3>
      </div>
      <div
        class="ant-col ant-col-24 crew-group css-dev-only-do-not-override-1ae8k9u"
      >
        <h4
          class="ant-typography css-dev-only-do-not-override-1ae8k9u"
        >
          test/department
        </h4>
        <div
          class="ant-row css-dev-only-do-not-override-1ae8k9u"
          style="margin-left: -12px; margin-right: -12px; row-gap: 16px;"
        >
          <div
            class="ant-col ant-col-24 ant-col-sm-12 ant-col-md-8 ant-col-lg-8 ant-col-xl-6 css-dev-only-do-not-override-1ae8k9u"
            style="padding-left: 12px; padding-right: 12px;"
          >
            <div
              class="ant-card ant-card-bordered ant-card-hoverable css-dev-only-do-not-override-1ae8k9u"
            >
              <div
                class="ant-card-cover"
              >
                <img
                  alt="test/name"
                  src="https://image.tmdb.org/t/p/w500/image"
                />
              </div>
              <div
                class="ant-card-body"
              >
                <div
                  class="ant-card-meta"
                >
                  <div
                    class="ant-card-meta-detail"
                  >
                    <div
                      class="ant-card-meta-title"
                    >
                      test/name
                    </div>
                    <div
                      class="ant-card-meta-description"
                    >
                      test/job
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Cast component should match snapshot with empty movie 1`] = `
<DocumentFragment>
  <div
    class="css-dev-only-do-not-override-1ae8k9u ant-empty ant-empty-normal"
  >
    <div
      class="ant-empty-image"
    >
      <svg
        height="41"
        viewBox="0 0 64 41"
        width="64"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fill-rule="evenodd"
          transform="translate(0 1)"
        >
          <ellipse
            cx="32"
            cy="33"
            fill="#f5f5f5"
            rx="32"
            ry="7"
          />
          <g
            fill-rule="nonzero"
            stroke="#d9d9d9"
          >
            <path
              d="M55 12.76L44.854 1.258C44.367.474 43.656 0 42.907 0H21.093c-.749 0-1.46.474-1.947 1.257L9 12.761V22h46v-9.24z"
            />
            <path
              d="M41.613 15.931c0-1.605.994-2.93 2.227-2.931H55v18.137C55 33.26 53.68 35 52.05 35h-40.1C10.32 35 9 33.259 9 31.137V13h11.16c1.233 0 2.227 1.323 2.227 2.928v.022c0 1.605 1.005 2.901 2.237 2.901h14.752c1.232 0 2.237-1.308 2.237-2.913v-.007z"
              fill="#fafafa"
            />
          </g>
        </g>
      </svg>
    </div>
    <div
      class="ant-empty-description"
    >
      Movie not found
    </div>
  </div>
</DocumentFragment>
`;

exports[`Cast component should match snapshot with error 1`] = `
<DocumentFragment>
  <div
    class="container top-margin"
  >
    <div
      class="ant-result ant-result-error css-dev-only-do-not-override-1ae8k9u"
    >
      <div
        class="ant-result-icon"
      >
        <span
          aria-label="close-circle"
          class="anticon anticon-close-circle"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="close-circle"
            fill="currentColor"
            fill-rule="evenodd"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M512 64c247.4 0 448 200.6 448 448S759.4 960 512 960 64 759.4 64 512 264.6 64 512 64zm127.98 274.82h-.04l-.08.06L512 466.75 384.14 338.88c-.04-.05-.06-.06-.08-.06a.12.12 0 00-.07 0c-.03 0-.05.01-.09.05l-45.02 45.02a.2.2 0 00-.05.09.12.12 0 000 .07v.02a.27.27 0 00.06.06L466.75 512 338.88 639.86c-.05.04-.06.06-.06.08a.12.12 0 000 .07c0 .03.01.05.05.09l45.02 45.02a.2.2 0 00.09.05.12.12 0 00.07 0c.02 0 .04-.01.08-.05L512 557.25l127.86 127.87c.04.04.06.05.08.05a.12.12 0 00.07 0c.03 0 .05-.01.09-.05l45.02-45.02a.2.2 0 00.05-.09.12.12 0 000-.07v-.02a.27.27 0 00-.05-.06L557.25 512l127.87-127.86c.04-.04.05-.06.05-.08a.12.12 0 000-.07c0-.03-.01-.05-.05-.09l-45.02-45.02a.2.2 0 00-.09-.05.12.12 0 00-.07 0z"
            />
          </svg>
        </span>
      </div>
      <div
        class="ant-result-title"
      >
        Something went wrong!
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Cast component should match snapshot with loading 1`] = `
<DocumentFragment>
  <div
    class="container top-margin"
  >
    <div
      class="ant-row ant-row-center css-dev-only-do-not-override-1ae8k9u"
    >
      <div
        class="ant-col css-dev-only-do-not-override-1ae8k9u"
      >
        <div
          aria-busy="true"
          aria-live="polite"
          class="ant-spin ant-spin-spinning css-dev-only-do-not-override-1ae8k9u"
        >
          <span
            class="ant-spin-dot ant-spin-dot-spin"
          >
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Cast component should match snapshot without release_date 1`] = `
<DocumentFragment>
  <div
    class="container top-margin"
  >
    <div
      class="ant-row css-dev-only-do-not-override-1ae8k9u"
    >
      <div
        class="ant-col ant-col-24 css-dev-only-do-not-override-1ae8k9u"
      >
        <div
          class="ant-typography css-dev-only-do-not-override-1ae8k9u"
        >
          <a
            href="/movie/1234-test-movie"
          >
            <span
              aria-label="arrow-left"
              class="anticon anticon-arrow-left"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="arrow-left"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M872 474H286.9l350.2-304c5.6-4.9 2.2-14-5.2-14h-88.5c-3.9 0-7.6 1.4-10.5 3.9L155 487.8a31.96 31.96 0 000 48.3L535.1 866c1.5 1.3 3.3 2 5.2 2h91.5c7.4 0 10.8-9.2 5.2-14L286.9 550H872c4.4 0 8-3.6 8-8v-60c0-4.4-3.6-8-8-8z"
                />
              </svg>
            </span>
             Back to movie details
          </a>
        </div>
      </div>
    </div>
    <div
      class="ant-row css-dev-only-do-not-override-1ae8k9u"
    >
      <div
        class="ant-col ant-col-24 css-dev-only-do-not-override-1ae8k9u"
      >
        <div
          class="ant-flex css-dev-only-do-not-override-1ae8k9u ant-flex-align-center ant-flex-gap-middle"
          style="margin-bottom: 24px;"
        >
          <h1
            class="ant-typography css-dev-only-do-not-override-1ae8k9u"
            style="margin-bottom: 0px;"
          >
            test/title
          </h1>
        </div>
      </div>
    </div>
    <div
      class="ant-row css-dev-only-do-not-override-1ae8k9u"
    >
      <div
        class="ant-col ant-col-24 css-dev-only-do-not-override-1ae8k9u"
      >
        <h3
          class="ant-typography css-dev-only-do-not-override-1ae8k9u"
        >
          Cast
          <span
            class="total-count"
          >
             (1)
          </span>
        </h3>
      </div>
      <div
        class="ant-col ant-col-24 css-dev-only-do-not-override-1ae8k9u"
      >
        <div
          class="ant-row css-dev-only-do-not-override-1ae8k9u"
          style="margin-left: -12px; margin-right: -12px; row-gap: 16px;"
        >
          <div
            class="ant-col ant-col-24 ant-col-sm-12 ant-col-md-8 ant-col-lg-8 ant-col-xl-6 css-dev-only-do-not-override-1ae8k9u"
            style="padding-left: 12px; padding-right: 12px;"
          >
            <div
              class="ant-card ant-card-bordered ant-card-hoverable css-dev-only-do-not-override-1ae8k9u"
            >
              <div
                class="ant-card-cover"
              >
                <img
                  alt="test/name"
                  src="https://image.tmdb.org/t/p/w500/image"
                />
              </div>
              <div
                class="ant-card-body"
              >
                <div
                  class="ant-card-meta"
                >
                  <div
                    class="ant-card-meta-detail"
                  >
                    <div
                      class="ant-card-meta-title"
                    >
                      test/name
                    </div>
                    <div
                      class="ant-card-meta-description"
                    >
                      test/character
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-divider css-dev-only-do-not-override-1ae8k9u ant-divider-horizontal"
        role="separator"
      />
      <div
        class="ant-col ant-col-24 css-dev-only-do-not-override-1ae8k9u"
      >
        <h3
          class="ant-typography css-dev-only-do-not-override-1ae8k9u"
        >
          Crew 
          <span
            class="total-count"
          >
            (1)
          </span>
        </h3>
      </div>
      <div
        class="ant-col ant-col-24 crew-group css-dev-only-do-not-override-1ae8k9u"
      >
        <h4
          class="ant-typography css-dev-only-do-not-override-1ae8k9u"
        >
          test/department
        </h4>
        <div
          class="ant-row css-dev-only-do-not-override-1ae8k9u"
          style="margin-left: -12px; margin-right: -12px; row-gap: 16px;"
        >
          <div
            class="ant-col ant-col-24 ant-col-sm-12 ant-col-md-8 ant-col-lg-8 ant-col-xl-6 css-dev-only-do-not-override-1ae8k9u"
            style="padding-left: 12px; padding-right: 12px;"
          >
            <div
              class="ant-card ant-card-bordered ant-card-hoverable css-dev-only-do-not-override-1ae8k9u"
            >
              <div
                class="ant-card-cover"
              >
                <img
                  alt="test/name"
                  src="https://image.tmdb.org/t/p/w500/image"
                />
              </div>
              <div
                class="ant-card-body"
              >
                <div
                  class="ant-card-meta"
                >
                  <div
                    class="ant-card-meta-detail"
                  >
                    <div
                      class="ant-card-meta-title"
                    >
                      test/name
                    </div>
                    <div
                      class="ant-card-meta-description"
                    >
                      test/job
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
